--- a/_posts/2018-01-14-CIS-194-Week_1.md
+++ b/_posts/2018-01-14-CIS-194-Week_1.md
@@ -10,6 +10,7 @@ category:
 # tags will also be used as html meta keywords.
 tags:
   - haskell
+  - functional programming
 show_meta: true
 comments: true
 mathjax: true
@@ -26,15 +27,25 @@ summaryfeed: false
 ## for twitter card with large image:
 ## for twitter video card: (active for this page**
 ---
+
+## Learning Haskell
+
+I have decided to take on the journey of learning functional programming myself. Please check out Uncle Bob's video[^1] on functional programming if the concept is new to you. They are plenty of good resources to teach you the concepts. Most notable is the legendary _Structure and Interpretation of Computer Programs_[^2] (SICP). SICP is defiantly a book I want to tackle one day but for now, I wish to learn Haskell[^3] so I can have a cool Xmonad[^4] setup.
+
+So where to start? I am following Chris Allen's[^5] recommendations on learning Haskell hence this course is my first course followed by Data64[^3] and Stanford's CS240H[^5]. Yup, it's going to be a long journey but as they say... you eat and elephant a bite at a time.
+
+I work a lot with Spark's Scala environment and plan to start using Xmonad[^4] soon so this should help accelerate my understanding of the concepts. So, my journey starts here. Brent Yorgey's CIS 194 Course[^6]. These problems are not easy, some of them require some time with a pen and paper so do not feel discouraged. If you are planning to learn Haskell using this course. Please give every problem a try before referencing at my answers.
+
+My answers might also be wrong, I am attempting the problems myself without much help. Feel free to comment below if you notice an error or can think of better way to write a solution.
+
+___
 **Exercise 1** We need to first find the digits of a number. Define the functions
 
 ```
 toDigits    :: Integer -> [Integer]
 toDigitsRev :: Integer -> [Integer]
 ```
-`toDigits `should convert positive Integers to a list of digits. (For 0 or
-negative inputs, `toDigits` should return the empty list.) `toDigitsRev`
-should do the same, but with the digits reversed.
+`toDigits `should convert positive Integers to a list of digits. (For 0 or negative inputs, `toDigits` should return the empty list.) `toDigitsRev`should do the same, but with the digits reversed.
 
 ```
 Example: toDigits 1234 == [1,2,3,4] 
@@ -58,16 +69,13 @@ toDigitsRev n
 {% endhighlight %}
 ___
 
-**Exercise 2** Once we have the digits in the proper order, we need to
-double every other one. Define a function
+**Exercise 2** Once we have the digits in the proper order, we need to double every other one. Define a function
 
 ```
 doubleEveryOther :: [Integer] -> [Integer]
 ```
 
-Remember that doubleEveryOther should double every other number
-beginning from the right, that is, the second-to-last, fourth-to-last,
-... numbers are doubled.
+Remember that doubleEveryOther should double every other number beginning from the right, that is, the second-to-last, fourth-to-last... numbers are doubled.
 
 ```
 Example: doubleEveryOther [8,7,6,5] == [16,7,12,5]
@@ -131,11 +139,7 @@ validate n = sumDigits (doubleEveryOther (toDigits n)) `mod` 10 == 0
 {% endhighlight %}
 ---
 
-**Exercise 5** The Towers of Hanoi is a classic puzzle with a solution
-that can be described recursively. Disks of different sizes are stacked
-on three pegs; the goal is to get from a starting configuration with
-all disks stacked on the first peg to an ending configuration with all
-disks stacked on the last peg.
+**Exercise 5** The Towers of Hanoi is a classic puzzle with a solution that can be described recursively. Disks of different sizes are stacked on three pegs; the goal is to get from a starting configuration with all disks stacked on the first peg to an ending configuration with all disks stacked on the last peg.
 
 {% include youtube.html id="WPSeyjX1-4s?t=20m10s" %}
 
@@ -159,3 +163,13 @@ hanoi 1 a b c = [(a, c)]
 hanoi 2 a b c = (a, b) : (a, c) : [(b, c)]
 hanoi n a b c = (a, c) : (a, b) : (c, b) : (a, c) : hanoi (n-1) b a c
 {% endhighlight %}
+___
+
+### References
+
+[^1]: [Robert C Martin (Uncle Bob) - Functional Programming; What? Why? When?](https://www.youtube.com/watch?v=7Zlp9rKHGD4)
+[^2]: [Structure and Interpretation of Computer Programs](https://mitpress.mit.edu/sicp/full-text/book/book.html)
+[^3]: [Haskell](https://www.haskell.org/)
+[^4]: [My Xmonad Setup](https://github.com/randomthought/xmonad-config)
+[^5]: [Chris Allen's learn haskell guide](https://github.com/bitemyapp/learnhaskell)
+[^6]: [CIS 194: Introduction to Haskell (Spring 2013)](http://www.cis.upenn.edu/~cis194/spring13/lectures.html)
