--- a/_posts/2018-01-14-CIS-194-Week_1.md
+++ b/_posts/2018-01-14-CIS-194-Week_1.md
@@ -2,8 +2,8 @@
 layout: post
 title: "CIS 194: Intro to Haskell (Spring 2013) Week 1 Solutions"
 date: "2018-01-14"
-slug: "example_content"
-description: "Example content from lanyon. If page description is more than 140 words, it will be shown as post summary on home page and blog index else post excerpt will be shown. Same rule is for html meta description: >140 words in description or first 50 words of posts will be shown as summary. Page excerpt supports markdown formatted summary."
+slug: "cis194_week_1"
+description: "Learning haskell by doing the CIS194 problems as recommended by Chris Allen's learning Haskell guide. I would be posting the problems and solutions for each week as I do them"
 category: 
   - views
   - featured
@@ -141,6 +141,8 @@ validate n = sumDigits (doubleEveryOther (toDigits n)) `mod` 10 == 0
 
 **Exercise 5** The Towers of Hanoi is a classic puzzle with a solution that can be described recursively. Disks of different sizes are stacked on three pegs; the goal is to get from a starting configuration with all disks stacked on the first peg to an ending configuration with all disks stacked on the last peg.
 
+> This problem is very interesting and enlightening, please give it a try before looking at the solution. If you are still struggling. Please try to play the game slowly [here](https://www.mathsisfun.com/games/towerofhanoi.html). and lastly, a hint. Once your base-case are covered, notice that moving an n number of begs from a to b is simply Hanoi n a c b. Use that to solve the recursive pattern. I have also included a video below that explains the solution.
+
 {% include youtube.html id="WPSeyjX1-4s?t=20m10s" %}
 
 For this exercise, define a function hanoi with the following type:
@@ -160,8 +162,8 @@ type Move = (Peg, Peg)
 hanoi :: Integer -> Peg -> Peg -> Peg -> [Move]
 hanoi 0 a b c = []
 hanoi 1 a b c = [(a, c)]
-hanoi 2 a b c = (a, b) : (a, c) : [(b, c)]
-hanoi n a b c = (a, c) : (a, b) : (c, b) : (a, c) : hanoi (n-1) b a c
+hanoi 2 a b c = (a, b) : (a, c) : hanoi 1 b a c
+hanoi n a b c = hanoi (n-1) a c b : hanoi 1 a b c : hanoi (n-1) b a c
 {% endhighlight %}
 ___
 
