--- a/_posts/2018-01-14-CIS-194-Week_1.md
+++ b/_posts/2018-01-14-CIS-194-Week_1.md
@@ -3,7 +3,7 @@ layout: post
 title: "CIS 194: Intro to Haskell (Spring 2013) Week 1 Solutions"
 date: "2018-01-14"
 slug: "cis194_week_1"
-description: "Learning haskell by doing the CIS194 problems as recommended by Chris Allen's learning Haskell guide. I would be posting the problems and solutions for each week as I do them"
+description: "Teaching myself Haskell by doing the Yorgey's CIS194 course problems as recommended by Chris Allen's learning Haskell guide. I would be posting the problems and solutions for each week as I do them"
 category: 
   - views
   - featured
